header and footer update for mobile

--- a/angular/tpl/blocks/mobile/footer.html
+++ b/angular/tpl/blocks/mobile/footer.html
@@ -1,12 +1,12 @@
-<div class="footerbackg" ng-if="stateurl!='home' && stateurl!='mobilemain' && stateurl!='signup'">
+<div class="mobile-footer footerbackg" ng-if="stateurl!='home' && stateurl!='mobilemain' && stateurl!='signup'">
    <ul>
-      <li><a ui-sref="app.todos"><img src="img/fhmenu1.png"></a></li>
-      <li><a ui-sref="app.wishlist"><img src="img/fhmenu2.png"></a></li>
-      <li><a ng-click="openbroadcastModal();"><img src="img/fhmenu3.png" class="mob-home"></a></li>
-      <li><a ng-click="openModal();"><img src="img/fhmenu4.png"></a></li>
-      <li><a ui-sref="app.chats"><img src="img/fhmenu5.png">
+      <li><a ui-sref="app.todos"><img src="./img/mobile/todo.png" /></a></li>
+      <li><a ui-sref="app.wishlist"><img src="./img/mobile/favourite.png" /></a></li>
+      <li><a ng-click="openbroadcastModal();"><img src="./img/mobile/menu.png" class="mob-home" /></a></li>
+      <li><a ng-click="openModal();"><img src="./img/mobile/add-service.png" /></a></li>
+      <li><a ui-sref="app.chats"><img src="./img/mobile/chat.png" />
       		<div class="noticount" ng-if="user.chatmessages > 0">{{user.chatmessages}}</div>
       		</a>
-  	</li>
+  	   </li>
    </ul>
 </div>
