--- a/angular/tpl/blocks/mobile/header.html
+++ b/angular/tpl/blocks/mobile/header.html
@@ -1,22 +1,24 @@
-<div id="wrap" ng-if="stateurl!='home' && stateurl!='mobilemain' && stateurl!='signup' && stateurl!='forgotpassword'">
-    <div><span class="pull-left">
-      <button type="button" class="topmenu" ng-click="openAside('left', true)">
-      <span class="fa fa-bars"></span>
+<div class="mobile-head" id="wrap" ng-if="stateurl!='home' && stateurl!='mobilemain' && stateurl!='signup' && stateurl!='forgotpassword'">
+    <div class="menu-bar">
+        <button type="button" class="topmenu" ng-click="openAside('left', true)">
+            <span class="fa fa-bars"></span>
         </button>
-        </span>
     </div>
-    <img ng-src="{{IMGURL}}{{settings.footerlogo}}" class="" ui-sref="app.usermain">
-    <a role="button" class="noti_newbtn notif_btnf" ui-sref="app.notification">
-                              <i class="fa fa-bell-o"></i>
-                              <div class="noticount" ng-if="user.notifications > 0">
-                                 {{user.notifications}} <!-- < 9 ? user.notifications : '9+'}} -->
-                              </div>
-                           </a>
-    <div class=" ">
-        <form novalidate name="searchform" ng-submit="gotosearch(searchData.keyword)" class="search-keyword-form">
-            <input type="text" id="search" placeholder="Search for anything" ng-model="searchData.keyword" ng-change="searchedit()" typeahead="data as data for data in keywords | filter:$viewValue" typeahead-on-select="gotosearch(searchData.keyword)">
-            <input  type="submit" ng-click="gotosearch(searchData.keyword)">
-        </form>
+    <div class="mobile-logo"><img ng-src="{{IMGURL}}{{settings.footerlogo}}" class="" ui-sref="app.usermain"></div>
+    <div class="menu-right">    
+        <a role="button" class="noti_newbtn notif_btnf" ui-sref="app.notification">
+            <i class="fa fa-bell-o"></i>
+            <div class="noticount" ng-if="user.notifications > 0">
+                {{user.notifications}} <!-- < 9 ? user.notifications : '9+'}} -->
+            </div>
+        </a>
+        <div class="search-wrapper">
+            <form novalidate name="searchform" ng-submit="gotosearch(searchData.keyword)" class="search-keyword-form">
+                <input type="text" id="search" placeholder="Search for anything" ng-model="searchData.keyword" ng-change="searchedit()" typeahead="data as data for data in keywords | filter:$viewValue" typeahead-on-select="gotosearch(searchData.keyword)">
+                <!-- <input type="submit" ng-click="gotosearch(searchData.keyword)"> -->
+                <i class="fa fa-search"></i>
+            </form>
+        </div>
     </div>
 </div>
 <div class="mobileloader" ng-if="formLoading">
