--- a/angular/tpl/desktop/projectlist.html
+++ b/angular/tpl/desktop/projectlist.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="row mt-15">
-            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in projects.data | itemsPerPage: totalPerPage" total-items="projects.total" current-page="pagination.current" ui-sref="app.projectdetails({id:data.id})">
+            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in projects.data | itemsPerPage: totalPerPage" total-items="projects.total" current-page="pagination.current" ui-sref="app.projectdetails({id:data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}">
                 <div class="table-card">
                     <div class="flex-top-space">
                         <div class="table-img">
