--- a/angular/tpl/desktop/dashboard.html
+++ b/angular/tpl/desktop/dashboard.html
@@ -648,7 +648,7 @@
                                     <div class="table-listing">
                                         <div class="table-card" dir-paginate="(key,data) in myProducts.data | itemsPerPage: totalPerPage" total-items="myProducts.total" current-page="pagination.current">
                                             <div class="flex-top-space">
-                                                <div class="table-img" ui-sref="app.viewitem({'id':data.id})">
+                                                <div class="table-img" ui-sref="app.viewitem({'id':data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}">
                                                     <img ng-src="{{data.images[0].filetype == 1 ? IMGURL:''}}{{data.images[0].thumbnail}}" />
                                                 </div>
                                                 <div class="table-content listing">
