--- a/angular/tpl/desktop/feedchat.html
+++ b/angular/tpl/desktop/feedchat.html
@@ -42,12 +42,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="content-detail-right"> <!-- feeds-no-options - add this if no second footer -->
+                    <div class="content-detail-right feeds-no-options"> <!-- feeds-no-options - add this if no second footer -->
                         <div class="feeds-wrapper">
                             <div class="feed-head">
                                 <div class="feed-head-left">
                                     <div class="avatar avatar-xs">
-                                        <img ng-src="{{IMGURL}}{{feedData.owner.avatar}}" ui-sref="app.viewuser({'id':feedData.owner.id})" />
+                                        <img ng-src="{{IMGURL}}{{feedData.owner.avatar}}" ui-sref="app.viewuser({'id':feedData.owner.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}"/>
                                     </div>
                                     <h3>{{feedData.owner.username | cut:true:20:''}} </h3>
                                 </div>
