--- a/angular/tpl/desktop/viewfeed.html
+++ b/angular/tpl/desktop/viewfeed.html
@@ -45,7 +45,7 @@
                     <div class="feed-head">
                         <div class="feed-head-left">
                             <div class="avatar avatar-xs">
-                                <img ng-src="{{IMGURL}}{{feedData.owner.avatar}}" ui-sref="app.viewuser({'id':feedData.owner.id})" />
+                                <img ng-src="{{IMGURL}}{{feedData.owner.avatar}}" ui-sref="app.viewuser({'id':feedData.owner.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}"/>
                             </div>
                             <h3>{{feedData.owner.username | cut:true:20:''}} </h3>
                         </div>
